fixed logo overlap issue at tablet screen widths

--- a/rtl.css
+++ b/rtl.css
@@ -588,14 +588,11 @@ a img {
 
   .title-container {
     position: relative;
-    height: 48px;
   }
   .title-container .container {
     position: relative;
     float: right;
     top: 50%;
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
   }
   .title-container:after {
     content: ".";
